# geometry

./: .gitignore  LICENSE  Make Change  README.md  clothes.txt  clothes2.txt  dylans-attempt1.txt  figuring-out-who-to-call  pyproject.toml  test_text_file  testing123.txt  wat.txt
.github/workflows/: python-package.yml
src/geometry/: __init__.py  circle.py  sphere.py
tests/: solved.py  test_circle.py
